--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-body{
-  font-family: 'Montserrat', sans-serif;
-
-}
-
-
 img{
   width: 100%;
   pointer-events: none;
@@ -20,4 +14,17 @@ img{
 
 .Navcontainer{
   width: 100%;
+}
+.Navchild{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.Linksholder{
+  background: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  padding: 5px 5px 5px 5px;
 }
